improved swag documentation
